fix time shifts form

--- a/app/assets/stylesheets/forms.sass
+++ b/app/assets/stylesheets/forms.sass
@@ -18,6 +18,10 @@ textarea
 .control-group
   @extend .form-group
 
+.form-group
+  .control-group
+    margin-bottom: 0
+
 form
   .help-block
     @extend small
